- clients should no longer spam server with config requests (and be spammed with config updates in return)

TODO: 
- handbook entry
- localisation